--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -111,8 +111,7 @@ p {
     color: #ffffff;
 }
 
-.search-engine-optimization, .online-reputation-management, 
-.social-media-marketing img {
+.search-engine-optimization, .online-reputation-management, .social-media-marketing img {
     max-height: 200px;
 }
 
