--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -76,7 +76,7 @@ a {
     font-size: 36px;
 }
 
-.search-engine-optimization, .online-reputation-management, .social-media-marketing img {
+.search-engine-optimization img, .online-reputation-management img, .social-media-marketing img {
     max-height: 200px;
 }
 
@@ -105,7 +105,7 @@ p {
     background-color: #2589bd;
 }
 
-.benefit-lead, .benefit-brand, .benefit-cost{
+.benefit-lead, .benefit-brand, .benefit-cost {
     margin-bottom: 32px;
     color: #ffffff;
 }
@@ -115,7 +115,7 @@ p {
     text-align: center;
 }
 
-.benefit-lead, .benefit-brand, .benefit-cos  img {
+.benefit-lead, .benefit-brand, .benefit-cos img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
