--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -71,14 +71,10 @@ a {
     color: #ffffff;
 }
 
-.search-engine-optimization, .online-reputation-management, .social-media-marketin h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
 .search-engine-optimization img, .online-reputation-management img, .social-media-marketing img {
     max-height: 200px;
 }
+
 
 .float-left {
     float: left;
@@ -88,6 +84,11 @@ a {
 .float-right {
     float: right;
     margin-left: 25px;
+}
+
+.search-engine-optimization h2, .online-reputation-management h2, .social-media-marketing h2 {
+    margin-bottom: 20px;
+    font-size: 36px;
 }
 
 p {
@@ -110,12 +111,12 @@ p {
     color: #ffffff;
 }
 
-.benefit-lead, .benefit-brand, .benefit-cost h3 {
+.benefit-lead h3, .benefit-brand h3, .benefit-cost h3 {
     margin-bottom: 10px;
     text-align: center;
 }
 
-.benefit-lead, .benefit-brand, .benefit-cos img {
+.benefit-lead img, .benefit-brand img, .benefit-cost img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
